# PROG2002_Graphics_prog_exam

./: CMakeLists.txt  README.md
res/shaders/: entities.frag  entities.vert  lightsrc.frag  lightsrc.vert  shader.frag  shader.vert  skybox.frag  skybox.vert  terrain.frag  terrain.vert
src/: main.cpp
src/framework/: camera.cpp  camera.hpp  consts.hpp  entity.cpp  entity.hpp  glutil.hpp  heightmap.cpp  heightmap.hpp  ibo.cpp  ibo.hpp  model.cpp  model.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  skybox.cpp  skybox.hpp  texture.cpp  texture.hpp  vao.cpp  vao.hpp  vbl.hpp  vbo.cpp  vbo.hpp
